2004-11-27 09:17 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormObjCHeaderParser/OCClass.m: Condensed parse methods into
	parse.  Corrected a minor issue.
	
2004-11-27 05:53 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormObjCHeaderParser/OCClass.h
	* GormObjCHeaderParser/OCClass.m
	* GormObjCHeaderParser/NSScanner+OCHeaderParser.h
	* GormObjCHeaderParser/NSScanner+OCHeaderParser.m
	* GormObjCHeaderParser/OCMethod.h
	* GormObjCHeaderParser/OCMethod.m
	* GormObjCHeaderParser/OCIVar.h
	* GormObjCHeaderParser/OCIVar.m
	* GormObjCHeaderParser/OCHeaderParser.h
	* GormObjCHeaderParser/OCHeaderParser.m
	* GormObjCHeaderParser/GNUmakefile: New files for class parser.
	* GormClassManager.m: Changes to use new class parser.

2004-11-24 00:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/GormNSOutlineView.h: Removed savedColor and
	added "Gorm" methods to the header.
	* Palettes/3Containers/GormNSOutlineView.m: Removed all references
	to savedColor and commented out select and unselect methods.
	* Palettes/3Containers/GormNSTableView.h: Removed saved color and
	commented out select and unselect.
	* Palettes/3Containers/GormNSTableView.m: Removed all references to
	savedColor and commented out select and unselect methods.
	Corrects bug #10118.
	
2004-11-20 13:27 Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources: Updated all gorms to latest format.
	* Palettes: Updated all gorms to latest format.
	
2004-11-18 00:23 Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile: Addition of entries for new 
	NSView+GormExtensions.[hm] files.
	* NSView+GormExtensions.[hm]: Added to hold extensions for the 
	NSView class in Gorm.
	* GModelDecoder.m: Changes to minimize warnings during compilation
	with gcc 3.x.  
	* GormClassEditor.m: Same as above
	* GormClassManager.m: Same as above
	* GormDocument.m: Same as above + new code to eliminate orphaned 
	views in _repairFile.