@@ -1,3 +1,11 @@
+2004-11-27 13:22 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormObjCHeaderParser/OCClass.m
+	* GormObjCHeaderParser/OCIVar.m 
+	* GormObjCHeaderParser/OCMethod.m: Added code to parse method
+	to trim the result of any whitespace to make certain that there
+	aren't any extra spaces in the data which could cause problems.
+	
 2004-11-27 09:17 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormObjCHeaderParser/OCClass.m: Condensed parse methods into
